--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -9,7 +9,7 @@ html {
 html,
 body {
 	height: 100%;
-	// font-family: $font_1;
+	font-family: $font_1;
 	font-weight: 400;
 	scroll-behavior: smooth;
 }
@@ -38,40 +38,4 @@ body {
 }
 
 /* remove */
-body {
-	font-family: cursive;
-}
 
-header,
-footer {
-	padding: 30px 0;
-	display: flex;
-	align-items: center;
-	min-height: 120px;
-	font-size: 50px;
-	text-align: center;
-	justify-content: center;
-	background-color: #ccc;
-
-	// @include bp($point_2, min) {
-	// 	background-color: tomato;
-	// }
-}
-
-.hello {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-
-	height: calc(100vh - 240px);
-	color: brown;
-	font-size: 5rem;
-
-	text-align: center;
-	// p {
-	// 	color: $color_black;
-	// }
-}
-
-/* remove */
