--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -28,14 +28,16 @@ body {
 
 .section {
 	width: 100%;
+	padding: 10rem 0;
 }
 
 .container {
-	// max-width: 126rem;
+	max-width: 144.4rem;
 	width: 100%;
+	padding: 0 2rem;
 
 	margin: 0 auto;
 }
 
-/* remove */
+
 
