--- a/src/scss/blocks/_input.scss
+++ b/src/scss/blocks/_input.scss
@@ -3,7 +3,7 @@
 .input {
 	display: flex;
 	flex-direction: row;
-    justify-content: center;
+	justify-content: center;
 	gap: 9.4rem;
 }
 
@@ -16,6 +16,7 @@
 	font-weight: 700;
 	line-height: 1.3;
 	text-align: left;
+	margin-bottom: 2rem;
 }
 
 .input_descr {
@@ -23,36 +24,62 @@
 	font-weight: 400;
 	line-height: 1.8;
 	text-align: left;
-    margin-bottom: 5rem;
+	margin-bottom: 5rem;
 }
 
-.input_email{
-    display: flex;
-    align-items: center;
-    width: 49.1rem;
-    height: 7.2rem;
-    background-color: rgba(112, 111, 229, 0.1);
+.input_email {
+	display: flex;
+	align-items: center;
+	width: 49.1rem;
+	height: 7.2rem;
+	background-color: rgba(112, 111, 229, 0.1);
+	border-radius: 1.2rem;
 }
 
-.inputt{
-    border: none;
-    background: transparent;
+.email {
+	margin-left: 2.2rem;
+	margin-right: 1.1rem;
 }
 
-.input_logo_item{
-    width: 26.2rem;
-    height: 15.8rem;
+.inputt {
+	flex: 1;
+	border: none;
+	background: transparent;
+	font-size: 1.6rem;
+	font-weight: 400;
+	line-height: 1.5;
+	text-align: left;
+}
+
+.btn_sbr {
+	width: 17.2rem;
+	height: 4.7rem;
+	background-color: $color_accent;
+	color: #fff;
+	border-radius: 1.2rem;
+	box-shadow: 0px 6px 20px 0px #706fe580;
+	font-size: 1.8rem;
+	font-weight: 600;
+	line-height: 1.5;
+	text-align: center;
+	margin-right: 1.8rem;
+	cursor: pointer;
+}
+
+.input_logo_item {
+	width: 26rem;
+	height: 15.8rem;
 }
 
 .input_logo_up {
 	display: flex;
-    margin-bottom: 6rem;
-    gap:3rem;
+	margin-bottom: 6rem;
+	gap: 3rem;
 }
 
 .input_logo_down {
 	display: flex;
-    gap:3rem;
+	gap: 3rem;
 }
 
 .input_logo-bg {
@@ -65,6 +92,13 @@
 	border-radius: 25%;
 }
 
+.input_logo_img {
+	margin-bottom: 1.1rem;
+}
+.input_logo-bg {
+	margin-bottom: 1.1rem;
+}
+
 .input_logo_img--1 {
 	width: 2.4rem;
 	height: 2.4rem;
@@ -75,6 +109,7 @@
 	font-weight: 600;
 	line-height: 1.4;
 	text-align: left;
+	margin-bottom: 1rem;
 }
 
 .input_logo_descr {
