--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -11,6 +11,7 @@ $color_title: #1E1F4B;
 $color_text: #2E3E5C;
 $color_text_2: #03014C;
 $color_bg_2: rgba(112, 111, 229, 0.02);
+$color_accent:#706FE5;
 
 
 
