feat header finish

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -23,7 +23,7 @@ body{
 	display: flex;
 	flex-direction: column;
 	min-height: 100%;
-	overflow: hidden;
+	// overflow: hidden;
 }
 
 .main {
@@ -50,7 +50,7 @@ body{
 }
 
 .container {
-	max-width: 144.4rem;
+	max-width: 114.4rem;
 	width: 100%;
 	padding: 0 2rem;
 
