--- a/src/scss/blocks/_input.scss
+++ b/src/scss/blocks/_input.scss
@@ -4,7 +4,7 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	gap: 9.4rem;
+	gap: 6.4rem;
 }
 
 .input_content {
@@ -64,7 +64,13 @@
 	text-align: center;
 	margin-right: 1.8rem;
 	cursor: pointer;
+	transition: all 0.5s ease-in-out;
 }
+
+.btn_sbr:hover{
+	background-color: #6f83e5a8;
+}
+
 
 .input_logo_item {
 	width: 26rem;
