feat section comment and trs_by finished

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -13,7 +13,7 @@ body {
 	scroll-behavior: smooth;
 }
 
-body{
+body {
 	font-family: $font_1;
 	color: $color_text;
 }
@@ -33,18 +33,49 @@ body{
 .section {
 	width: 100%;
 	padding: 10rem 0;
-	&.section--bg{
+	&.section--bg {
 		background-color: $color_bg_2;
+	}
+
+	
+}
+.section__decor {
+	position: relative;
+
+	&::after,
+	&::before {
+		position: absolute;
+		top: 0;
+
+		content: '';
+
+		width: 10rem;
+		height: 7.1rem;
+
+		background-image: url(../imgs/comments_img/points.svg);
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: contain;
+	}
+
+	&::after{
+		left: -6rem;
+	
+	}
+
+	&::before{
+		right: -6rem;
+		top: 62rem;
 	}
 }
 
-.section_title{
+.section_title {
 	font-size: 4rem;
 	font-weight: 800;
 	line-height: 1.5;
 	color: $color_title;
 
-	&.section_title--centr{
+	&.section_title--centr {
 		text-align: center;
 	}
 }
@@ -56,6 +87,3 @@ body{
 
 	margin: 0 auto;
 }
-
-
-
