feat section wcw add and finished

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -36,9 +36,22 @@ body {
 	&.section--bg {
 		background-color: $color_bg_2;
 	}
-
-	
 }
+
+.section--footer {
+	background-color: $color_text;
+	color: #fff;
+	height: 42.8rem;
+	padding: 5.1rem 0 5.7rem;
+}
+
+.section--footer_title {
+	font-size: 1.8rem;
+	font-weight: 700;
+	line-height: 1.5;
+	text-align: left;
+}
+
 .section__decor {
 	position: relative;
 
@@ -58,12 +71,11 @@ body {
 		background-size: contain;
 	}
 
-	&::after{
+	&::after {
 		left: -6rem;
-	
 	}
 
-	&::before{
+	&::before {
 		right: -6rem;
 		top: 62rem;
 	}
@@ -78,6 +90,14 @@ body {
 	&.section_title--centr {
 		text-align: center;
 	}
+}
+
+.section_descr {
+	font-size: 2rem;
+	font-weight: 400;
+	line-height: 1.8;
+	text-align: left;
+	margin-bottom: 5rem;
 }
 
 .container {
