--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -1,20 +1,14 @@
 @use './helpers/abstracts' as *;
 
-.section--footer {
-	background-color: $color_text;
-	color: #fff;
-    height: 42.8rem;
-    padding: 5.1rem 0 5.7rem;
-}
 
-.section--footer_title {
-	font-size: 1.8rem;
-	font-weight: 700;
-	line-height: 1.5;
-	text-align: left;
-}
 
 .footer_social {
+	
+	margin-bottom: 4.8rem;
+	border-bottom: 1px solid rgba($color: #EAEEF3, $alpha: 0.15);
+}
+
+.footer_social_w{
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -72,22 +66,7 @@
     text-wrap: nowrap;
 }
 
-.btn_cont {
-	width: 18.1rem;
-	height: 4.7rem;
-	background-color: $color_accent;
-	color: #fff;
-	border-radius: 1.2rem;
-	// box-shadow: 0px 6px 20px 0px #706fe580;
-	font-size: 1.8rem;
-	font-weight: 600;
-	line-height: 1.5;
-	text-align: center;
 
-	// margin-left: 13.43rem;
-	cursor: pointer;
-	transition: all 0.5s ease-in-out;
-}
 
 .footer_power{
     display: flex;
