--- a/src/scss/helpers/extends/_buttons_extends.scss
+++ b/src/scss/helpers/extends/_buttons_extends.scss
@@ -1,3 +1,6 @@
+@use '../variables' as *;
+
+
 @mixin st_btn {
 	display: inline-flex;
 	justify-content: center;
@@ -11,34 +14,46 @@
 }
 
 //color extends
-// %transp_btn_1 {
-// 	@include st_btn;
+%transp_btn_1 {
+	@include st_btn;
 
-// 	font-weight: 700;
-// 	color: $color_white;
-// 	background-color: transparent;
-// 	transition: 0.3s ease;
-// 	border: 2px solid $color_white;
+	font-weight: 600;
+	color: $color_white;
+	background-color: $color_accent;
+	transition: 0.3s ease;
 
-// 	&:hover {
-// 		background-color: $color_white;
-// 		color: $color_black;
-// 	}
-// }
+	&:hover {
+		background-color: $color_white;
+		color: $color_black;
+	}
+}
 
 //size extends
-// %btn_size_1 {
-// 	min-width: 23.2rem;
-// 	height: 5.4rem;
-// 	padding: 0 2rem;
+%btn_size_1 {
+	min-width: 18.1rem;
+	height: 4.7rem;
 
-// 	line-height: 5.4rem;
-// 	font-size: 1.6rem;
+	line-height: 1.5;
+	font-size: 1.8rem;
 
-// 	border-radius: 2px;
-// }
+	border-radius: 1.2rem;
+}
+%btn_size_2 {
+	min-width: 17.2rem;
+	height: 4.7rem;
 
-// .btn_white_1 {
-// 	@extend %white_btn_1;
-// 	@extend %btn_size_1;
-// }
+	line-height: 1.5;
+	font-size: 1.8rem;
+
+	border-radius: 1.2rem;
+}
+
+.btn_accent_1 {
+	@extend %transp_btn_1;
+	@extend %btn_size_1;
+}
+
+.btn_accent_2{
+	@extend %transp_btn_1;
+	@extend %btn_size_2;
+}
