--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,7 @@
 @use './base';
 @use "./blocks/header";
 @use "./blocks/trs_by";
+@use "./blocks/wcw";
 @use "./blocks/comment";
 @use "./blocks/input";
 @use "./blocks/footer";
