feat section hero start

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 @use './helpers/reset';
 @use './base';
 @use "./blocks/header";
+@use "./blocks/hero";
 @use "./blocks/trs_by";
 @use "./blocks/wcw";
 @use "./blocks/comment";
