--- a/src/scss/helpers/extends/_buttons_extends.scss
+++ b/src/scss/helpers/extends/_buttons_extends.scss
@@ -41,9 +41,11 @@
 %btn_size_2 {
 	min-width: 17.2rem;
 	height: 4.7rem;
-
+	margin-right: 1.9rem;
 	line-height: 1.5;
 	font-size: 1.8rem;
+	box-shadow: 0px 6px 20px 0px #706FE580;
+
 
 	border-radius: 1.2rem;
 }
