--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -38,6 +38,14 @@ body {
 	}
 }
 
+.section_descr--hero {
+	font-size: 1.6rem;
+	font-weight: 400;
+	line-height: 1.5;
+	text-align: left;
+	margin-left: 1.3rem;
+}
+
 .section--footer {
 	background-color: $color_text;
 	color: #fff;
