--- a/src/scss/blocks/_hero.scss
+++ b/src/scss/blocks/_hero.scss
@@ -3,6 +3,13 @@
 .hero_content {
 	display: flex;
 	flex-direction: row;
+	gap: 5.1rem;
+}
+
+.hero_content_info {
+	display: block;
+	max-width: 62%;
+	flex-shrink: 0;
 }
 
 .hero_title_link_w {
@@ -12,6 +19,10 @@
 	border: 8px solid $color_accent;
 	width: 35.4rem;
 	height: 10.9rem;
+
+	// display: block;
+	// max-width: 62%;
+	// flex-shrink: 0;
 }
 
 strong {
@@ -27,7 +38,7 @@ strong {
 	font-size: 6rem;
 	font-weight: 700;
 	line-height: 11rem;
-    margin-bottom: 4.2rem;
+	margin-bottom: 4.2rem;
 	text-align: left;
 
 	strong {
@@ -65,27 +76,144 @@ strong {
 	}
 }
 
-.hero_title_bottom{
-    display: flex;
-    margin-top: 2.4rem;
+.hero_title_bottom {
+	display: flex;
+	margin-top: 2.4rem;
 }
 
-.btn--hero{
-    margin-right: 3.5rem;
+.btn--hero {
+	margin-right: 3.5rem;
 }
 
-.play_btn{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 4.8rem;
-    height: 4.8rem;
-    background-color: rgba(112, 111, 229, 0.1);
-    border-radius: 50%;
+.play_btn {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 4.8rem;
+	height: 4.8rem;
+	background-color: rgba(112, 111, 229, 0.1);
+	border-radius: 50%;
 }
 
+.hero_content_decorbox {
+	position: relative;
+	width: 43rem;
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+}
 
-.hero_content_decorbox{
-    height: 53.1rem;
-    width: 53.1rem; 
+.hero_picture {
+	display: flex;
+	justify-content: center;
+	width: 40rem;
+	height: 40rem;
+	border: 1rem solid $color_accent;
+	border-radius: 50%;
+	background-color: rgba(112, 111, 229, 0.15);
+	flex-shrink: 0;
+}
+
+.hero_picture_in {
+	position: absolute;
+	width: 46rem;
+	height: 46rem;
+	bottom: 5rem;
+}
+
+.hero_decor_box_img {
+	@extend %contain_img;
+}
+
+.hero-decor {
+	position: absolute;
+
+	&.hero-decor--1 {
+		top: -9.2rem;
+		left: -12rem;
+	}
+	&.hero-decor--2 {
+		top: -3.7rem;
+		left: -4rem;
+	}
+	&.hero-decor--3 {
+		top: -3.9rem;
+		left: 33.3rem;
+	}
+	&.hero-decor--4 {
+		width: 8.3rem;
+		height: 8.3rem;
+		background-color: $color_accent;
+		border-radius: 50%;
+
+		bottom: -8.3rem;
+		right: 2.8rem;
+	}
+}
+
+.hero_employess {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	position: absolute;
+	width: 24rem;
+	height: auto;
+	box-shadow: 0px 0.6rem 2rem 0px rgba(0, 0, 0, 0.1019607843);
+	background-color: #fff;
+	border-radius: 1rem;
+	padding: 1.4rem 2.6rem;
+	bottom: -3.6rem;
+	overflow: hidden;
+}
+
+.hero_employess_photo {
+	display: flex;
+}
+
+.hero_employess_photo_item {
+	width: 4rem;
+	height: 4rem;
+	border-radius: 50%;
+	border: 2px solid #e9e8fa;
+	overflow: hidden;
+}
+.hero_employess_photo_item:not(:first-child) {
+	margin-left: -2rem;
+}
+
+.hero_photo {
+	@extend %cover_img;
+}
+
+.hero_employess_title {
+	margin-top: 0.9rem;
+	margin-bottom: 0.7rem;
+}
+
+.hero_employess_title_txt {
+	font-size: 2rem;
+	font-weight: 600;
+	line-height: 1.2;
+	text-align: center;
+}
+
+.hero_employess_likes {
+	display: flex;
+	align-items: center;
+	gap: 0.7rem;
+
+	font-size: 1.6rem;
+	font-weight: 500;
+	line-height: 1.5;
+	text-align: center;
+}
+
+.star {
+	display: inline-block;
+	width: 2.6rem;
+	height: 2.6rem;
+	background-image: url(../imgs/hero/Star.svg);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: contain;
 }
