feat landing_agency finish

--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -25,6 +25,54 @@
 .header_nav_w {
 	display: flex;
 	gap: 4.5rem;
+
+	
+	@include bp($point_5) {
+		position: fixed;
+        z-index: 998;
+        top: 0;
+        left: 0;
+        width: 100dvw;
+        height: 100dvh;
+        -webkit-backdrop-filter: blur(9rem);
+        backdrop-filter: blur(9rem);
+        display: flex;
+        transition: all 0.3s ease-in-out;
+        overflow: auto;
+        transform: translateX(-100dvw);
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+	
+	}
+	
+}
+.header_nav_w.active {
+    @include bp($point_5) {
+        transform: translateX(0);
+        opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
+    }
+}
+
+.nav__close {
+    @include bp($point_5) {
+        display: block;
+        position: absolute;
+        z-index: 999;
+        top: 6rem;
+        left: 2rem;
+        height: 4rem;
+        width: 4rem;
+        background-color: transparent;
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+        background-image: url(../imgs/Header/cross-svgrepo-com.svg);
+        border: none;
+        cursor: pointer;
+    }
 }
 
 .header_nav_item{
@@ -41,3 +89,51 @@
 	text-align: left;
     color: $color_title;
 }
+
+.menu_btn{
+	
+	@include bp($point_4 , min ) {
+		display: none;
+	
+	}
+
+	@include bp($point_5) {
+			display: block;
+			position: absolute;
+			top: 1rem;
+			right: 1rem;
+			height: 5rem;
+			width: 5rem;
+			background-color: transparent;
+			background-repeat: no-repeat;
+			background-size: contain;
+			background-position: center;
+			background-image: url(../imgs/header/hamburger-menu-more-svgrepo-com.svg);
+			border: none;
+			cursor: pointer;
+	}
+	
+}
+
+.nav_list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 6rem;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 2.8rem;
+
+    @include bp($point_5) {
+        display: flex;
+        flex-direction: column;
+        padding: 4rem;
+        align-items: center;
+        row-gap: 7rem;
+        margin: auto;
+        text-align: center;
+    }
+}
+
+
