--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -3,7 +3,25 @@
 html {
 	// font-size: calc(100dvw / 1920 * 10);
 
-	font-size: 10px;
+
+
+	
+	@include bp($point_1 , min) {
+		font-size: 10px;
+	}
+	
+	
+	@media (min-width: $point_2) and (max-width: $point_1 - 1px) {
+		font-size: calc(100dvw / 1920 * 10);
+	}
+	
+
+	
+	@include bp($point_3) {
+		font-size: 10px;
+	}
+	
+
 }
 
 html,
@@ -36,6 +54,10 @@ body {
 	&.section--bg {
 		background-color: $color_bg_2;
 	}
+
+	&.section--ov-hidden{
+		overflow: hidden;
+	}
 }
 
 .section_descr--hero {
@@ -43,13 +65,11 @@ body {
 	font-weight: 400;
 	line-height: 1.5;
 	text-align: left;
-	margin-left: 1.3rem;
 }
 
 .section--footer {
 	background-color: $color_text;
 	color: #fff;
-	height: 42.8rem;
 	padding: 5.1rem 0 5.7rem;
 }
 
