--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -13,6 +13,12 @@
 	align-items: center;
 	justify-content: space-between;
 	margin-bottom: 4.8rem;
+
+	
+	@include bp($point_5) {
+	flex-direction: column;
+	}
+	
 }
 
 .footer_social_list {
@@ -48,12 +54,28 @@
 .footer_nav_list_w {
 	display: flex;
     justify-content: space-between;
+
+	
+	@include bp($point_3) {
+		flex-direction: column;
+		align-items: center;
+		row-gap: 0.5rem;
+	
+	}
+	
 }
 
 .footer_nav_list {
 	display: flex;
     align-items: center;
 	gap: 8rem;
+	
+	@include bp($point_3) {
+		flex-direction: column;
+		row-gap: 0.5rem;
+	
+	}
+	
 }
 
 .footer_nav_item {
