--- a/src/scss/helpers/extends/_buttons_extends.scss
+++ b/src/scss/helpers/extends/_buttons_extends.scss
@@ -30,7 +30,7 @@
 
 //size extends
 %btn_size_1 {
-	min-width: 18.1rem;
+	width: 18.1rem;
 	height: 4.7rem;
 
 	line-height: 1.5;
@@ -39,7 +39,7 @@
 	border-radius: 1.2rem;
 }
 %btn_size_2 {
-	min-width: 17.2rem;
+	width: 17.2rem;
 	height: 4.7rem;
 	margin-right: 1.9rem;
 	line-height: 1.5;
