--- a/src/scss/blocks/_hero.scss
+++ b/src/scss/blocks/_hero.scss
@@ -166,7 +166,8 @@ strong {
 
 .hero_content_decorbox {
 	position: relative;
-	width: 43rem;
+	max-width:  43rem;
+	width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: flex-end;
@@ -180,7 +181,8 @@ strong {
 .hero_picture {
 	display: flex;
 	justify-content: center;
-	width: 40rem;
+	max-width: 40rem;
+	width: 100%;
 	height: 40rem;
 	border: 1rem solid $color_accent;
 	border-radius: 50%;
@@ -190,7 +192,8 @@ strong {
 
 .hero_picture_in {
 	position: absolute;
-	width: 46rem;
+	max-width: 46rem;
+	width: 100%;
 	height: 46rem;
 	bottom: 5rem;
 }
@@ -213,6 +216,14 @@ strong {
 	&.hero-decor--3 {
 		top: -3.9rem;
 		left: 33.3rem;
+
+		
+		@include bp($point_6) {
+			top: -3.9rem;
+			left: 27rem;
+	
+		}
+		
 	}
 	&.hero-decor--4 {
 		width: 8.3rem;
